Closed Bug 1605795 Opened 5 years ago Closed 5 years ago

[Wayland] Extension popup window disappears when tooltip is displayed

Categories

(Core :: Widget: Gtk, defect, P3)

72 Branch
Unspecified
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla74
Tracking Status
firefox-esr68 --- unaffected
firefox71 --- unaffected
firefox72 --- wontfix
firefox73 --- wontfix
firefox74 --- fixed

People

(Reporter: viktor_jaegerskuepper, Assigned: jhorak)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Steps to reproduce:

  1. Install an extension which can display a popup window (e.g. NoScript, uBlock Origin).
  2. Click on the extension icon to display the popup window.
  3. Move the mouse pointer to another element in the toolbar and wait until the tooltip appears (this doesn't always work for me).
  4. The extension popup window disappears.

This is a regression introduced by bug 1585918.

Blocks: wayland
Regressed by: 1585918
Has Regression Range: --- → yes

I forgot to mention that I see the following in the console:

Gdk-WARNING: Tried to map a popup with a non-top most parent

Priority: -- → P3

The most common case is that the popup is attached to last opened window. First
we need to hide tooltips so we don't attach the new window to them, then the
menu tree has to be clean up to also avoid wrong popup parent.

If there is no window opened we will attach the window to the toplevel window.

There's also one exception regarding widget-overflow panel: popups with remote content
and widget-overflow panel have to replace all other windows otherwise they will be
attached to wrong parent.

Assignee: nobody → jhorak
Status: NEW → ASSIGNED
Pushed by cbrindusan@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/12c004663a5c Attach new popup to last opened popup or toplevel window; r=stransky
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla74

Is there any chance this can be ported to FF 73? The bug breaks a lot of other plugins like Bitwarden.

Fx73 is due to ship on Tuesday and the final RC build has already been created. That said, we can leave this set to fix-optional as a possible ride-along fix in case of a 73.0.1 dot release.

Fedora can ship it as a downstream patch and I'm not aware of any other distro which runs Wayland by default now.

I didn't realise final 73 was so close. Please don't complicate your work on my behalf - I can simply switch to the beta channel for a proper fix.

Sounds like we can let this fix ride Fx74 to release then. Thanks.

Regressions: 1621660
Regressions: 1677847
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: