Bug 1605795 - Attach new popup to last opened popup or toplevel window; r=stransky

The most common case is that the popup is attached to last opened window. First
we need to hide tooltips so we don't attach the new window to them, then the
menu tree has to be clean up to also avoid wrong popup parent.

If there is no window opened we will attach the window to the toplevel window.

There's also one exception regarding widget-overflow panel: popups with remote content
and widget-overflow panel have to replace all other windows otherwise they will be
attached to wrong parent.

Differential Revision: https://phabricator.services.mozilla.com/D61694

--HG--
extra : moz-landing-system : lando